gatsby-michal-domarus-personal/src/scss/style.scss
$breakpoint: "800px";

body {
	color: #333;
	font-family: "Montserrat", sans-serif;
	font-size: 14px;
	margin: 0;
	padding: 0.5rem;
	box-sizing: border-box;
}

h1,
h2 {
	font-family: "Roboto Condensed", sans-serif;
	font-weight: 700;
	margin: 1em 0 0.5em 0;
}

h1 {
	font-size: 150%;
	a {
		background: none;
		text-decoration: none;
	}
}

h2 {
	font-size: 120%;
}

ul {
	margin: 0 1em;
	padding: 0 0 1em 0;
}

a {
	color: inherit;
}

.page {
	max-width: 1400px;
	margin: 0 auto;
	min-height: calc(100vh - 6em);
}

.sidebar {
	margin-bottom: 2em;
	text-transform: uppercase;

	@media (min-width: $breakpoint) {
		float: left;
		max-width: 200px;
		min-width: 200px;
		padding: 1em;
		position: -webkit-sticky;
		position: sticky;
		top: 0;
		width: 200px;
	}
}

.links {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	@media (min-width: $breakpoint) {
		flex-direction: column;
	}

	li {
		margin-right: 1em;
		margin-bottom: 0.5em;
		list-style: none;
	}
}

.instagram {
	width: 1em;
}

.content {
	overflow: auto;

	@media (min-width: $breakpoint) {
		padding: 1em;
	}

	h1 {
		margin-top: 0;
		@media (min-width: $breakpoint) {
			margin-top: 1em;
		}
	}
}

.copyright {
	margin: 1em 0;
	text-align: center;

	a {
		vertical-align: middle;
		margin-left: 0.5em;
	}
}

.image {
	margin-bottom: 0.5rem;
	@media (min-width: $breakpoint) {
		margin-bottom: 1.6em;
	}
}

.slideshow {
	.image {
		height: auto;
		max-height: calc(100vh - 3rem);
		opacity: 0;
		transition: opacity 0.25s ease-in;
		width: auto;
		&--active {
			opacity: 1;
			transition: opacity 0.25s ease-in;
		}
	}
}

